estadisticas de pedidos y usuarios

--- a/hjs-encomiendas-servidor/hjs-encomiendas-servidor.csproj
+++ b/hjs-encomiendas-servidor/hjs-encomiendas-servidor.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.OrTools" Version="9.4.1874" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
